[package]
name = "vscode-nvim-colorscheme-converter"
version = "0.1.0"
authors = ["Vinícius Müller <vinigm.nho@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = { version = "1.0.128", features = ["derive"] }
serde_json = "1.0"
json_comments = "0.2.0"
